--- a/code/spring-cloud-parent/eureka-server/src/main/resources/application-pig1.yml
+++ b/code/spring-cloud-parent/eureka-server/src/main/resources/application-pig1.yml
@@ -5,7 +5,8 @@ server:
   port: 8762
 eureka:
   instance:
-    hostname: localhost
+    hostname: 127.0.0.1
+    prefer-ip-address: true
   client:
     # 服务注册中心也会将自己作为客户端来尝试注册自己,为true（默认）时自动生效
     # 做注册中心集群的时候，必须设置为true
@@ -13,4 +14,4 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:8763/eureka/
+      defaultZone: http://127.0.0.1:8763/eureka/
