--- a/code/spring-cloud-parent/eureka-server/src/main/resources/application-pig2.yml
+++ b/code/spring-cloud-parent/eureka-server/src/main/resources/application-pig2.yml
@@ -5,9 +5,10 @@ server:
   port: 8763
 eureka:
   instance:
-    hostname: localhost
+    hostname: 127.0.0.1
+    prefer-ip-address: true
   client:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:8762/eureka/
+      defaultZone: http://127.0.0.1:8762/eureka/
