Spring Cloud权限、认证

--- a/code/spring-cloud-parent/config-server/src/main/resources/application.yml
+++ b/code/spring-cloud-parent/config-server/src/main/resources/application.yml
@@ -12,3 +12,7 @@ spring:
           default-label: master
           username: luocong2013
           password: aA13378215903
+eureka:
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:8761/eureka/
