--- a/code/spring-cloud-parent/config-client/src/main/resources/application.yml
+++ b/code/spring-cloud-parent/config-client/src/main/resources/application.yml
@@ -5,6 +5,15 @@ spring:
     name: config-client
   cloud:
     config:
-      uri: http://localhost:8888/
+      # uri: http://localhost:8888/
       label: master
       profile: dev
+      discovery:
+        # 是否从配置中心读取文件
+        enabled: true
+        # 配置中心的serviceId，即服务名
+        service-id: config-server
+eureka:
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:8761/eureka/
