Spring Cloud 服务调用 RestTemplate

--- a/code/spring-cloud-parent/config-server/src/main/resources/application.yml
+++ b/code/spring-cloud-parent/config-server/src/main/resources/application.yml
@@ -10,8 +10,8 @@ spring:
           uri: https://github.com/luocong2013/spring-cloud-config
           search-paths: repo
           default-label: master
-          username: luocong2013
-          password: aA13378215903
+          username:
+          password:
 eureka:
   client:
     service-url:
