--- a/code/spring-cloud-parent/service-consumer/src/main/resources/application.yml
+++ b/code/spring-cloud-parent/service-consumer/src/main/resources/application.yml
@@ -5,7 +5,16 @@ server:
   port: 8741
 eureka:
   instance:
+    hostname: ${spring.cloud.client.ip-address}
     prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ip-address}:${server.port}
+    lease-renewal-interval-in-seconds: 30
   client:
+    # 检查健康
+    healthcheck:
+      enabled: true
     service-url:
-      defaultZone: http://127.0.0.1:8762/eureka/,http://127.0.0.1:8763/eureka/
+      # eureka server 集群
+      # defaultZone: http://127.0.0.1:8762/eureka/,http://127.0.0.1:8763/eureka/
+      # eureka 单机
+      defaultZone: http://luocong:pwd123456@127.0.0.1:8761/eureka/
