--- a/code/commons-ui/src/main/resources/commons-ui-config.properties
+++ b/code/commons-ui/src/main/resources/commons-ui-config.properties
@@ -1,2 +1,4 @@
 # \u7248\u672C\u53F7
-commons.io.version=V1.0.0
+commons.ui.version=V1.0.0
+# \u8FD0\u884C\u7684\u7A97\u53E3\u540D\u79F0\uFF0C\u9009\u586B EXECUTE|HTTP|SCRAPY
+commons.ui.frame=EXECUTE
