--- a/code/spring-cloud-parent/config-client/pom.xml
+++ b/code/spring-cloud-parent/config-client/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>config-client</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>config-client</name>
-    <description>Demo project for Spring Boot</description>
+    <description>SpringCloud配置服务-客户端</description>
 
     <properties>
         <java.version>1.8</java.version>
