--- a/code/spring-cloud-parent/eureka-server/pom.xml
+++ b/code/spring-cloud-parent/eureka-server/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>eureka-server</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>eureka-server</name>
-    <description>Demo project for Spring Boot</description>
+    <description>SpringCloud微服务注册中心</description>
 
     <properties>
         <java.version>1.8</java.version>
