--- a/code/spring-cloud-parent/gateway-zuul/pom.xml
+++ b/code/spring-cloud-parent/gateway-zuul/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>gateway-zuul</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>gateway-zuul</name>
-    <description>Demo project for Spring Boot</description>
+    <description>SpringCloud网关服务</description>
 
     <properties>
         <java.version>1.8</java.version>
