--- a/code/spring-cloud-parent/service-consumer/pom.xml
+++ b/code/spring-cloud-parent/service-consumer/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>service-consumer</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>service-consumer</name>
-    <description>Demo project for Spring Boot</description>
+    <description>微服务消费者</description>
 
     <properties>
         <java.version>1.8</java.version>
