--- a/notes/docker/docker-files/Dockerfile-Kibana7.3.0
+++ b/notes/docker/docker-files/Dockerfile-Kibana7.3.0
@@ -1,11 +1,12 @@
 # Version: 7.3.0
 
-FROM elasticsearch:7.3.0
+FROM kibana:7.3.0
 
 MAINTAINER luocong2017<luocong2017@gmail.com>
 
+USER root:root
+
 RUN cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
     echo 'Asia/Shanghai' > /etc/timezone
-		
-COPY config /usr/share/elasticsearch/config
-COPY plugins /usr/share/elasticsearch/plugins
+
+USER kibana
