jhm并发性能测试

--- a/code/java-concurrency/pom.xml
+++ b/code/java-concurrency/pom.xml
@@ -21,6 +21,9 @@
         <!--log-->
         <logback.version>1.2.3</logback.version>
 
+        <!-- JMH 性能测试 -->
+        <jmh.version>1.21</jmh.version>
+
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     </properties>
 
@@ -50,6 +53,20 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
         </dependency>
+
+        <!-- JMH 性能测试 START -->
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>${jmh.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>${jmh.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- JMH 性能测试 END -->
     </dependencies>
 
     <build>
