--- a/code/ibed/src/main/resources/application-dev.yml
+++ b/code/ibed/src/main/resources/application-dev.yml
@@ -41,7 +41,8 @@ mapper:
 
 # Minio的配置，这是一个用于开发测试的 minio 地址.
 minio:
-  endpoint: http://192.168.0.110:9000
-  access-key: dev
-  secret-key: 123456789
-  bucket: ibed
+  tieba:
+    endpoint: http://192.168.0.110:9000
+    access-key: dev
+    secret-key: 123456789
+    bucket: tieba
