--- a/code/java-http/pom.xml
+++ b/code/java-http/pom.xml
@@ -17,6 +17,8 @@
         <commons-lang3.version>3.9</commons-lang3.version>
         <commons-collections4.version>4.3</commons-collections4.version>
         <httpclient.version>4.5.9</httpclient.version>
+        <okhttp.version>4.3.1</okhttp.version>
+        <httpasyncclient.version>4.1.4</httpasyncclient.version>
         <commons-httpclient.version>3.1</commons-httpclient.version>
 
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -51,14 +53,14 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>3.14.2</version>
+            <version>${okhttp.version}</version>
         </dependency>
 
         <!--异步HttpClient-->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpasyncclient</artifactId>
-            <version>4.1.4</version>
+            <version>${httpasyncclient.version}</version>
         </dependency>
 
         <!--HttpClient 3.1-->
