--- a/code/java-pool/pom.xml
+++ b/code/java-pool/pom.xml
@@ -14,6 +14,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
 
+        <!--minio-->
+        <minio.version>6.0.13</minio.version>
         <!--apache commons pool2-->
         <commons-pool2.version>2.8.0</commons-pool2.version>
         <!--apache commons net-->
@@ -30,6 +32,12 @@
     </properties>
 
     <dependencies>
+        <!--minio-->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>${minio.version}</version>
+        </dependency>
         <!--apache commons pool2-->
         <dependency>
             <groupId>org.apache.commons</groupId>
