DockerCompose minio mongodb

--- a/notes/docker/docker-compose/docker-compose-minio.yml
+++ b/notes/docker/docker-compose/docker-compose-minio.yml
@@ -10,10 +10,13 @@ services:
             mynetwork:
                 aliases:
                     - minio
+        environment:
+            MINIO_ACCESS_KEY: root
+            MINIO_SECRET_KEY: 123456789
         volumes:
-            - /home/docker/minio/data:/data
+            - $PWD/data:/data
         command:
-            minio server /data
+            server /data
 networks:
     mynetwork:
         driver: bridge
