--- a/notes/docker/docker-compose/docker-compose-mongodb.yml
+++ b/notes/docker/docker-compose/docker-compose-mongodb.yml
@@ -1,2 +1,48 @@
 version: '3'
 services:
+  mongodb:
+    image: mongo:latest
+    container_name: mongodb-service-1
+    ports:
+      - 27017:27017
+    networks:
+      mynetwork:
+        aliases:
+          - mongodb
+    environment:
+      TZ: Asia/Shanghai
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: admin@123456
+    volumes:
+      - $PWD/mongo/db:/data/db
+      - $PWD/mongo/configdb:/data/configdb
+      - /etc/localtime:/etc/localtime
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "200k"
+        max-file: "10"
+  mongoexpress:
+    image: mongo-express:latest
+    container_name: mongoexpress-service-1
+    links:
+      - mongodb
+    depends_on:
+      - mongodb
+    ports:
+      - 27018:8081
+    networks:
+      mynetwork:
+        aliases:
+          - mongoexpress
+    environment:
+      ME_CONFIG_OPTIONS_EDITORTHEME: 3024-night
+      ME_CONFIG_MONGODB_SERVER: mongodb
+      ME_CONFIG_MONGODB_ENABLE_ADMIN: "true"
+      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: admin@123456
+      ME_CONFIG_BASICAUTH_USERNAME: admin
+      ME_CONFIG_BASICAUTH_PASSWORD: admin@123456
+networks:
+  mynetwork:
+    driver: bridge
