--- a/code/ibed/pom.xml
+++ b/code/ibed/pom.xml
@@ -38,7 +38,8 @@
 
         <!--plugin-->
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <docker-maven-plugin.version>1.0.0</docker-maven-plugin.version>
+        <docker-maven-plugin.version>1.2.0</docker-maven-plugin.version>
+        <jib-maven-plugin.version>2.1.0</jib-maven-plugin.version>
         <!--mybatis plugin 设置-->
         <mybatis-plugin-generator.configurationFile>
             ${project.basedir}/src/main/resources/mybatis/generator/generatorConfig.xml
@@ -218,12 +219,14 @@
                 <configuration>
                     <dockerDirectory>${project.basedir}/src/main/docker</dockerDirectory>
                     <imageName>${project.name}</imageName>
-                    <imageTags>1.0.0</imageTags>
+                    <imageTags>
+                        <imageTag>${project.version}</imageTag>
+                    </imageTags>
                     <resources>
                         <resource>
                             <targetPath>/</targetPath>
                             <directory>${project.build.directory}</directory>
-                            <include>${project.build.finalName}.jar</include>
+                            <include>${project.build.finalName}.${packaging}</include>
                         </resource>
                     </resources>
                     <dockerHost>http://192.168.0.111:2375</dockerHost>
@@ -248,6 +251,40 @@
                         </configuration>
                         <goals>
                             <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!--
+            Jib 只将发生变更的层推送到 registers
+            -->
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>${jib-maven-plugin.version}</version>
+                <configuration>
+                    <from>
+                        <image>openjdk:alpine</image>
+                    </from>
+                    <to>
+                        <image>docker.io/luocong/ibed</image>
+                        <tags>
+                            <tag>1.0.0</tag>
+                        </tags>
+                        <auth>
+                            <!--镜像仓库的用户名-->
+                            <username>luocong</username>
+                            <!--密码-->
+                            <password>密码</password>
+                        </auth>
+                    </to>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
                         </goals>
                     </execution>
                 </executions>
