--- a/notes/docker/docker-compose/docker-compose-minio.yml
+++ b/notes/docker/docker-compose/docker-compose-minio.yml
@@ -16,7 +16,7 @@ services:
         volumes:
             - $PWD/data:/data
         command:
-            server /data
+            minio server /data --address ':9000'
 networks:
     mynetwork:
         driver: bridge
