Redis + Lua 实现http请求限流

--- a/code/java-kafka/src/main/resources/application.yml
+++ b/code/java-kafka/src/main/resources/application.yml
@@ -32,3 +32,5 @@ spring:
       group-id: test-consumer-group
     listener:
       missing-topics-fatal: false
+    template:
+      default-topic: defaultTopic
