--- a/code/java-zookeeper/pom.xml
+++ b/code/java-zookeeper/pom.xml
@@ -16,6 +16,7 @@
 
         <!--Curator-->
         <curator.version>4.2.0</curator.version>
+        <zookeeper.version>3.6.1</zookeeper.version>
 
         <!--apache tools-->
         <commons-lang3.version>3.9</commons-lang3.version>
@@ -32,13 +33,19 @@
         <!--Curator-->
         <dependency>
             <groupId>org.apache.curator</groupId>
-            <artifactId>curator-framework</artifactId>
-            <version>${curator.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.curator</groupId>
             <artifactId>curator-recipes</artifactId>
             <version>${curator.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.zookeeper</groupId>
+                    <artifactId>zookeeper</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>${zookeeper.version}</version>
         </dependency>
 
         <!--常用工具包-->
