--- a/code/spring-boot-netty-protobuf/pom.xml
+++ b/code/spring-boot-netty-protobuf/pom.xml
@@ -22,6 +22,7 @@
         <netty-all.version>4.1.50.Final</netty-all.version>
         <protobuf.version>3.12.0</protobuf.version>
         <grpc.version>1.29.0</grpc.version>
+        <commons-lang3.version>3.9</commons-lang3.version>
 
         <os-maven-plugin.version>1.6.2</os-maven-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -63,6 +64,11 @@
             <version>${grpc.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
