--- a/code/spring-security-parent/single-security-jdbc/src/main/resources/application.yml
+++ b/code/spring-security-parent/single-security-jdbc/src/main/resources/application.yml
@@ -16,3 +16,6 @@ spring:
       minimum-idle: 5
 server:
   port: 9000
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
