--- a/code/zync-bound/pom.xml
+++ b/code/zync-bound/pom.xml
@@ -25,13 +25,25 @@
         <mongodb.version>3.12.5</mongodb.version>
         <!--hanlp-->
         <hanlp.version>portable-1.7.7</hanlp.version>
+        <!--jasypt spring boot starter-->
+        <jasypt-spring-boot-starter.version>3.0.3</jasypt-spring-boot-starter.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+
         <!--elasticsearch start-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -64,6 +76,13 @@
         </dependency>
         <!--elasticsearch end-->
 
+        <!-- jasypt-spring-boot-starter -->
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <version>${jasypt-spring-boot-starter.version}</version>
+        </dependency>
+
         <!--Curator-->
         <dependency>
             <groupId>org.apache.curator</groupId>
@@ -76,10 +95,6 @@
             <version>${curator.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
         <!--guava-->
         <dependency>
             <groupId>com.google.guava</groupId>
