--- a/code/spring-security-parent/form-login-2/pom.xml
+++ b/code/spring-security-parent/form-login-2/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>form-login-2</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>form-login-2</name>
-    <description>Demo project for Spring Boot</description>
+    <description>SpringSecurity 表单登录</description>
 
     <properties>
         <java.version>1.8</java.version>
