--- a/code/spring-security-parent/form-login-5/pom.xml
+++ b/code/spring-security-parent/form-login-5/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>form-login-5</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>form-login-5</name>
-    <description>Demo project for Spring Boot</description>
+    <description>登录，将用户数据存入数据库</description>
 
     <properties>
         <java.version>1.8</java.version>
