--- a/code/spring-security-parent/form-login/pom.xml
+++ b/code/spring-security-parent/form-login/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>form-login</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>form-login</name>
-    <description>Demo project for Spring Boot</description>
+    <description>SpringSecurity自定义登录页面</description>
 
     <properties>
         <java.version>1.8</java.version>
