--- a/code/spring-security-parent/withjpa/pom.xml
+++ b/code/spring-security-parent/withjpa/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>withjpa</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>withjpa</name>
-    <description>Demo project for Spring Boot</description>
+    <description>SpringSecurity 结合 Spring Data Jpa</description>
 
     <properties>
         <java.version>1.8</java.version>
