Spring Security 实现HTTP认证

--- a/code/spring-security-parent/cors-1/pom.xml
+++ b/code/spring-security-parent/cors-1/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>cors-1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>cors-1</name>
-	<description>Demo project for Spring Boot</description>
+	<description>SpringSecurity 跨域场景</description>
 
 	<properties>
 		<java.version>1.8</java.version>
