--- a/code/spring-security-parent/httpbasic/pom.xml
+++ b/code/spring-security-parent/httpbasic/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.zync.security</groupId>
-    <artifactId>cors-2</artifactId>
+    <artifactId>httpbasic</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>cors-2</name>
-    <description>SpringSecurity 跨域场景</description>
+    <name>httpbasic</name>
+    <description>Http Basic认证</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -21,12 +21,21 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
