--- a/code/spring-cloud-alibaba-parent/nacos-discovery-consumer/pom.xml
+++ b/code/spring-cloud-alibaba-parent/nacos-discovery-consumer/pom.xml
@@ -6,7 +6,6 @@
         <groupId>com.zync.nacos</groupId>
         <artifactId>spring-cloud-alibaba-parent</artifactId>
         <version>${revision}</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>nacos-discovery-consumer</artifactId>
@@ -29,6 +28,10 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
         </dependency>
 
         <dependency>
