--- a/code/spring-cloud-alibaba-parent/pom.xml
+++ b/code/spring-cloud-alibaba-parent/pom.xml
@@ -11,6 +11,8 @@
     <properties>
         <revision>1.0.0-SNAPSHOT</revision>
         <java.version>1.8</java.version>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
         <spring-boot.version>2.2.11.RELEASE</spring-boot.version>
         <spring-cloud.version>Hoxton.SR10</spring-cloud.version>
         <spring-cloud-alibaba.version>2.2.3.RELEASE</spring-cloud-alibaba.version>
@@ -19,6 +21,7 @@
     <modules>
         <module>nacos-discovery-provide</module>
         <module>nacos-discovery-consumer</module>
+        <module>nacos-micro-service</module>
     </modules>
 
     <dependencyManagement>
