spring cloud gateway

--- a/code/spring-cloud-alibaba-parent/pom.xml
+++ b/code/spring-cloud-alibaba-parent/pom.xml
@@ -20,6 +20,7 @@
 
     <modules>
         <module>nacos-discovery-provide</module>
+        <module>nacos-discovery-gateway</module>
         <module>nacos-discovery-consumer</module>
         <module>nacos-micro-service</module>
     </modules>
