--- a/code/spring-cloud-alibaba-parent/pom.xml
+++ b/code/spring-cloud-alibaba-parent/pom.xml
@@ -13,6 +13,8 @@
         <java.version>1.8</java.version>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <mysql.version>8.0.18</mysql.version>
+        <seata.version>1.4.2</seata.version>
         <spring-boot.version>2.2.11.RELEASE</spring-boot.version>
         <spring-cloud.version>Hoxton.SR10</spring-cloud.version>
         <spring-cloud-alibaba.version>2.2.3.RELEASE</spring-cloud-alibaba.version>
@@ -23,6 +25,7 @@
         <module>nacos-discovery-gateway</module>
         <module>nacos-discovery-consumer</module>
         <module>nacos-micro-service</module>
+        <module>nacos-seata-service</module>
     </modules>
 
     <dependencyManagement>
