反射解析bean属性

--- a/code/zync-bound/pom.xml
+++ b/code/zync-bound/pom.xml
@@ -144,6 +144,11 @@
             <version>3.9</version>
         </dependency>
         <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.4</version>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.68</version>
